# hastebin

./: .gitignore  Cargo.toml  OLD_Cargo.toml  db  notes  openapi.json
.well-known/: ai-plugin.json
docs/ai/: README.md  example.py
migrations/: 20260510170024_create_paste_table.sql  20260510170040_create_comment_table.sql  20260511101935_alter_paste_content.sql  20260515190131_add_page_index_to_comment.sql
old/: main.rs  paste.rs
src/: config.rs  main.rs  paste.rs  utils.rs
src/api/: Cargo.toml
src/api/src/: cache.rs  lib.rs  router.rs  routes.rs
src/api/src/handlers/: comment.rs  paste.rs
src/api/src/routes/: comment.rs  mod.rs  paste.rs
src/engine/: Cargo.toml
src/engine/src/: cleanup.rs  comment.rs  compression.rs  db.rs  lib.rs  models.rs  paste.rs  utils.rs
src/engine/src/paste/: mod.rs  paste.rs  validation.rs
src/engine/tests/: cleanup.rs  comment.rs  paste.rs
src/engine/tests/common/: mod.rs
src/tasks/: cleanup.rs  mod.rs  sync_cache.rs
