[package]
name = "hastebin"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "src/engine", "src/api"]
resolver = "2"

[dependencies]
engine = { path = "./src/engine" }
api = { path = "./src/api" }

axum = { version = "0.8.9", features = [ "macros" ] }
axum-extra = "0.12.6"

anyhow = "1.0.102"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.10", features = ["fs", "trace", "cors", "compression-full"] }
 
sqlx = { version = "=0.8.6", features = [ "runtime-tokio", "postgres" ] }
 
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures = "0.3.32"
futures-util = "0.3.32"
# 
# thiserror = "2.0.3"
# 
# rand = "0.10.1"
# rand_distr = "0.6.0"
# 
# urlencoding = "2.1.3"
# 
# strum = "0.28.0"
# strum_macros = "0.28.0"
# 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenv = "0.15.0"