[package]
name = "api"
version = "0.1.0"
edition = "2024"
description = "Sub-crate responsible for connecting the engine to routing service"

[dependencies]
engine = { path = "../engine" }
axum = { version = "0.8.9", features = ["macros"] }
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
