[package]
name = "engine"
version = "0.1.0"
edition = "2024"
description = "Actual hastebin engine"

[dependencies]
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
sha2 = "0.10.9"
serde_json = "1.0.149"
zstd = "0.13.3"
